objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Status__c</fullName>
        <description>Converts the Inactive field into a visual field using static resource images</description>
        <formula>IMAGE( 
IF( Inactive__c  = False , &quot;/resource/Contact_Status_Icons/tick.png&quot;,&quot;/resource/Contact_Status_Icons/cross.png&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_for_bookings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to mark a contact as authorised to make bookings</description>
        <inlineHelpText>The contact is authorised to make booking. This permission is only observed if the account requests so</inlineHelpText>
        <label>Authorized for bookings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorized_to_see_rates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to mark a contact as authorised to see rates</description>
        <inlineHelpText>The contact is authorised to see rates. This permission is only observed if the account requests so</inlineHelpText>
        <label>Authorized to see rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Contact Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Score_Description__c</fullName>
        <formula>IF( Contact_Score__c =100,&quot;All Contact Details Captured&quot;, 
&quot;Issues: &quot;&amp;
IF( CONTAINS(Phone, &quot;000000&quot;), &quot;Fake Phone Number, &quot;,&quot;&quot;)&amp;
&quot;&quot;
&amp;
IF(LEN( Email) = 0, &quot;Missing Email, &quot;,&quot;&quot;)&amp;
&quot;&quot;
&amp;
IF( LEN(Title) = 0, &quot;Missing Job Title, &quot;,&quot;&quot;)&amp;
&quot;&quot;
&amp;
IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Missing Salutation&quot;,&quot;&quot;))</formula>
        <label>Contact Score Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Score__c</fullName>
        <formula>IF( ISPICKVAL(Salutation,&quot;&quot;), 0,10) +
IF( LEN( FirstName) = 0, 0,20) + 
IF( LEN( LastName) = 0, 0,20) + 
IF( CONTAINS(Phone, &quot;000000&quot;) , 0, 20) +
IF( LEN( Email) = 0, 0,20) + 
IF( LEN(Title) = 0, 0,10)</formula>
        <label>Contact Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick the box if this contact is no longer active. E.g. they have left the company they are associated with or have asked TNT to stop contacting them.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Initials__c</fullName>
        <label>Middle Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Asst_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Assistants Phone</description>
        <formula>IF( 
        LEN( AssistantPhone )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(AssistantPhone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   AssistantPhone , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Assistants Phone</inlineHelpText>
        <label>NVM Asst. Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Home_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Home Phone</description>
        <formula>IF( 
        LEN( HomePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(HomePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   HomePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Home Phone</inlineHelpText>
        <label>NVM Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Mobile__c</fullName>
        <description>NewVoiceMedia click to dial Mobile Phone</description>
        <formula>IF( 
        LEN( MobilePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   MobilePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Mobile Phone</inlineHelpText>
        <label>NVM Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Other_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Other Phone</description>
        <formula>IF( 
        LEN( OtherPhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(OtherPhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   OtherPhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Other Phone</inlineHelpText>
        <label>NVM Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN(  Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   Phone, &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Active_Status__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Inactive Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Valid_Phone</fullName>
        <active>true</active>
        <description>We must enforce that phones don&apos;t contain spaces</description>
        <errorConditionFormula>NOT(REGEX( Phone , &quot;[0-9]{7,15}&quot;)) &amp;&amp; NOT($Profile.Name = &apos;System Administrator&apos;) &amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>please enter a valid phone (7-15 digit, no spaces)</errorMessage>
    </validationRules>
</CustomObject>